@@ -31,6 +31,10 @@ Changes that could break older environments:
 * The output generated by the xml formatter for <junit> has changed
   again, it doesn't format the numeric value in the time attribute anymore.
 
+* Pattern matching rules have changes slightly, the pattern foo*
+  doesn't match files contained in a directory named foo - use foo/*
+  instead.
+
 Other changes:
 --------------
 
@@ -119,6 +123,9 @@ Other changes:
   you top search for a file in a given path.
 
 * <junit> can now optionally set a property on test failure.
+
+* <taskdef> can now define several tasks at once, reading the 
+  name/classname pairs from a property file or resource.
 
 Fixed bugs:
 -----------
